hot fix on getFirst to get(0)